cmake_minimum_required(VERSION 3.15)
project(CppPractice)

set(CMAKE_CXX_STANDARD 14)

include_directories("./util")

file(GLOB SOURCE_FILES ./util/*.cpp)

add_executable(CppPractice main.cpp acmicpc/ExhaustiveSearch/prob1476.cpp acmicpc/dfs/prob1260.cpp cpp-practice/vector/adjacentList.cpp util/vectorUtil.cpp util/vectorUtil.h acmicpc/dfs/prob1260-2.cpp acmicpc/dfs/prob2667.cpp)

add_executable(prob1000 acmicpc/basic/prob1000.cpp)
add_executable(prob10951 acmicpc/basic/prob10951.cpp)
add_executable(prob11718 acmicpc/basic/prob11718.cpp)
add_executable(prob11720 acmicpc/basic/prob11720.cpp)
add_executable(practice_next_perm acmicpc/permutation/practice_next_perm.cpp)
add_executable(prob10974 acmicpc/permutation/prob10974.cpp)
add_executable(prob1476 acmicpc/ExhaustiveSearch/prob1476.cpp)
add_executable(prob1260 acmicpc/dfs/prob1260.cpp)
add_executable(adjacentList cpp-practice/vector/adjacentList.cpp util/vectorUtil.cpp acmicpc/sorting/prob1517.cpp)
add_executable(prob1260-2 acmicpc/dfs/prob1260-2.cpp)
add_executable(prob2667 acmicpc/dfs/prob2667.cpp)
add_executable(prob1517 acmicpc/sorting/prob1517.cpp)
add_executable(prob1012 acmicpc/dfs/prob1012.cpp)
add_executable(prob11403 acmicpc/dfs/prob11403.cpp)
add_executable(prob14502 acmicpc/dfs/prob14502.cpp)
add_executable(prob1197 acmicpc/mst/mst/prob1197.cpp)
add_executable(prob1197-2 acmicpc/mst/mst/prob1197-2.cpp)
add_executable(prob1922 acmicpc/mst/network/prob1922.cpp)
add_executable(2-addTwoNumbers leetcode/2-addTwoNumbers.cpp)
add_executable(prob2178 acmicpc/bfs/prob2178.cpp)
add_executable(prob11724 acmicpc/dfs/prob11724.cpp)
add_executable(prob6603 acmicpc/dfs/prob6603.cpp)
add_executable(prob1912 acmicpc/dp/prob1912.cpp)
add_executable(3-longestSubstring leetcode/3-longestSubstring.cpp)
add_executable(prob2583 acmicpc/dfs/prob2583.cpp)

add_executable(prob7576 acmicpc/bfs/prob7576.cpp)
add_executable(prob1697 acmicpc/bfs/prob1697.cpp)
add_executable(prob2468 acmicpc/bfs/prob2468.cpp)
add_executable(prob7562 acmicpc/bfs/prob7562.cpp)
add_executable(prob7579 acmicpc/dp/prob7579.cpp)
add_executable(prob1463 acmicpc/dp/prob1463.cpp)
add_executable(prob11726 acmicpc/dp/prob11726.cpp acmicpc/dp/prob11049.cpp)
add_executable(prob11049 acmicpc/dp/prob11049.cpp)
add_executable(prob9095 acmicpc/dp/prob9095.cpp)
add_executable(6-zigzag leetcode/6-zigzag.cpp)
add_executable(prob1915 acmicpc/dp/prob1915.cpp)
add_executable(prob10026 acmicpc/dfs/prob10026.cpp)
add_executable(prob7569 acmicpc/bfs/prob7569.cpp)
add_executable(5-longestPalindrom leetcode/5-longestPalindrom.cpp)
add_executable(5-longestPalindrom-dp leetcode/5-longestPalindrom-dp.cpp)
add_executable(7-reverseInteger leetcode/7-reverseInteger.cpp)
add_executable(9-palindromeNumber leetcode/9-palindromeNumber.cpp)
add_executable(prob10950 acmicpc/io/prob10950.cpp)
add_executable(prob2293 acmicpc/dp/prob2293.cpp)

add_executable(prob2293_memory_fail acmicpc/dp/prob2293_memory_fail.cpp)
add_executable(prob1987 acmicpc/dfs/prob1987.cpp)
add_executable(prob10809 acmicpc/string/prob10809.cpp)

add_executable(prob11723 acmicpc/basic/prob11723.cpp)
add_executable(basic_io cpp-practice/io/basic_io.cpp)
add_executable(prob2206 acmicpc/bfs/prob2206.cpp)
add_executable(13-romanToInteger leetcode/13-romanToInteger.cpp)
add_executable(12-integerToRoman leetcode/12-integerToRoman.cpp)
add_executable(string_practice cpp-practice/string/string_practice.cpp)
add_executable(1342-NumberToZero leetcode/1342-NumberToZero.cpp)
add_executable(prob2309 acmicpc/ExhaustiveSearch/prob2309.cpp)
add_executable(prob11721 acmicpc/basic/prob11721.cpp)
add_executable(8-stringToInteger leetcode/8-stringToInteger.cpp)
add_executable(prob2133 acmicpc/dp/prob2133.cpp)
add_executable(prob11052 acmicpc/dp/prob11052.cpp)
add_executable(prob10952 acmicpc/basic/prob10952.cpp)
add_executable(prob10953 acmicpc/basic/prob10953.cpp)
add_executable(prob11021 acmicpc/basic/prob11021.cpp)
add_executable(prob11022 acmicpc/basic/prob11022.cpp)
add_executable(prob11719 acmicpc/basic/prob11719.cpp)
add_executable(prob2741 acmicpc/basic/prob2741.cpp)
add_executable(prob2742 acmicpc/basic/prob2742.cpp)
add_executable(prob2739 acmicpc/basic/prob2739.cpp)
add_executable(prob1924 acmicpc/basic/prob1924.cpp)
add_executable(prob10818 acmicpc/basic/prob10818.cpp)
add_executable(prob2438 acmicpc/basic/prob2438.cpp)
add_executable(prob2439 acmicpc/basic/prob2439.cpp)
add_executable(prob2440 acmicpc/basic/prob2440.cpp)
add_executable(prob2441 acmicpc/basic/prob2441.cpp)
add_executable(prob2442 acmicpc/basic/prob2442.cpp)
add_executable(prob2444 acmicpc/basic/prob2444.cpp)
add_executable(prob2445 acmicpc/basic/prob2445.cpp)
add_executable(prob2446 acmicpc/basic/prob2446.cpp)
add_executable(prob2522 acmicpc/basic/prob2522.cpp)
add_executable(prob10991 acmicpc/basic/prob10991.cpp)
add_executable(prob10992 acmicpc/basic/prob10992.cpp)
add_executable(14-longestCommonPrefix leetcode/14-longestCommonPrefix.cpp)
add_executable(prob2644 acmicpc/bfs/prob2644.cpp)
add_executable(20-validParentheses leetcode/20-validParentheses.cpp)
add_executable(chain-of-responsibility design-pattern/chain-of-responsibility/chain-of-responsibility.cpp design-pattern/chain-of-responsibility/HelpHandler.cpp
        design-pattern/chain-of-responsibility/Widget.cpp design-pattern/chain-of-responsibility/Button.cpp design-pattern/chain-of-responsibility/Dialog.cpp
        design-pattern/chain-of-responsibility/Application.cpp)
add_executable(11-ContainerWithMostWaterBruteForce leetcode/11-ContainerWithMostWaterBruteForce.cpp)
add_executable(prob10844 acmicpc/dp/prob10844.cpp)
add_executable(prob2228 acmicpc/dp/prob2228.cpp)